tests/parser/statement_case_err5.expected
Syntax Error: line 9:
Unexpected token (TOK_ID, 's'), likely missing a(n)  
  'TOK_KEY_ELSE' or
  'TOK_KEY_END' or
Possibly due to malformed or missing:
  Non-terminal: 'If Statement' or
  Non-terminal: 'While Statement' or
  Non-terminal: 'Write Statement' or
  Non-terminal: 'Read Statement' or
  Non-terminal: 'Case'
