tests/parser/statement_case_err5.mtp
begin
	(*missing else*)
	case (something) of
	first:
		s := 0;
	second:
		s := 1
	
		s := 99
	end
end
.